fixed spacings

--- a/likewise/src/components/navbar/style.css
+++ b/likewise/src/components/navbar/style.css
@@ -17,7 +17,7 @@ a {
     color: white;
     font-size: 24px !important;
     font-family: "Roboto", sans-serif !important;
-    margin-right: 1rem;
+    padding-left: 1rem;
 }
 
 .bar {
